Updated button example documentation

--- a/examples/button/button.html
+++ b/examples/button/button.html
@@ -111,6 +111,9 @@
                 Makes the  element keyboard focusable and part of tab order of the
                 page.
               </li>
+              <li>
+                The <code>a</code> element needs to define <code>tabindex=0</code> to become part of the tab order on the page, when it is missing or has an empty <code>href</code> attribute.
+              </li>
             </ul>
           </td>
         </tr>
