Editorial Corrections  In Link Example
modified examples/link/link.html:
Minor editorial corrections in intro and states and properties table.

--- a/examples/link/link.html
+++ b/examples/link/link.html
@@ -22,7 +22,7 @@
     <a href="https://github.com/w3c/aria-practices/issues/228">issue 228.</a>
   </p>
   <p>
-    The examples below demonstrate four variations of the
+    The examples below demonstrate three variations of the
     <a href="../../#link">design pattern for link</a>.
      The link pattern is used when it is necessary for elements other than the HTML <code>a</code> element to have link behaviors.
   </p>
@@ -160,7 +160,7 @@
           <th scope="row"><code>aria-label</code></th>
           <td><code>span</code></td>
           <td>
-            Examples 3: Defines the accessible name of the link.
+            Example 3: Defines the accessible name of the link.
         </tr>
       </tbody>
     </table>
