Updated disclosure example, restored DL, DT and DD and used the button element instead of span elements with role=button

--- a/examples/disclosure/disclosure-img-long-description.html
+++ b/examples/disclosure/disclosure-img-long-description.html
@@ -34,187 +34,200 @@
     <h2 id="ex_label">Example</h2>
     <div role="separator" id="ex_start_sep" aria-labelledby="ex_start_sep ex_label" aria-label="Start of" ></div>
     <div id="ex1">
-      <p>
+      <figure>
+
         <img src="images/minard.png" aria-labelledby="id_short_desc" />
-        <span id="id_short_desc"> Charles Minard's 1869 chart showing the number of men in
+      
+        <caption id="id_short_desc"> Charles Minard's 1869 chart showing the number of men in
           Napoleon’s 1812 Russian campaign army, their movements, as well as the temperature they
-          encountered on the return path </span> 
-          (<span tabindex="0" role="button" aria-expanded="true" aria-controls="id_long_desc"
-        > chart details </span>).
-      </p>
-      <div id="id_long_desc">
-        <h2 id="id_data_label">Data for Charles Minars's Chart of Naploean's Invasion of Russia</h2>
-        <table aria-labelledby="id_data_label">
-          <thead>
-            <tr>
-              <th scope="col">Location</th>
-              <th scope="col">Approximate Date</th>
-              <th scope="col">Size of Army</th>
-              <th scope="col">Tempature C</th>
-              <th scope="col">Tempature F</th>
-              <th scope="col">Direction</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <th scope="row">Kowno River</th>
-              <td>June 24th</td>
-              <td>442,000</td>
-              <td>na</td>
-              <td>na</td>
-              <td>Advance</td>
-            </tr>
-            <tr>
-              <th scope="row">Wilna</th>
-              <td>June 30th</td>
-              <td>400,000</td>
-              <td>na</td>
-              <td>na</td>
-              <td>Advance</td>
-            </tr>
-            <tr>
-              <th scope="row">Witebsk</th>
-              <td>na</td>
-              <td>175,000</td>
-              <td>na</td>
-              <td>na</td>
-              <td>Advance</td>
-            </tr>
-            <tr>
-              <th scope="row">Smolensk</th>
-              <td>August 16th</td>
-              <td>145,000</td>
-              <td>na</td>
-              <td>na</td>
-              <td>Advance</td>
-            </tr>
-            <tr>
-              <th scope="row">Chjat</th>
-              <td>na</td>
-              <td>127,000</td>
-              <td>na</td>
-              <td>na</td>
-              <td>Advance</td>
-            </tr>
-            <tr>
-              <th scope="row">Mojaisk</th>
-              <td>September 7th</td>
-              <td>100,000</td>
-              <td>na</td>
-              <td>na</td>
-              <td>Advance</td>
-            </tr>
-            <tr>
-              <th scope="row">Moscow</th>
-              <td>September 14th</td>
-              <td>100,000</td>
-              <td>na</td>
-              <td>na</td>
-              <td>Advance</td>
-            </tr>
-            <tr>
-              <th scope="row">Malo-jarosewli</th>
-              <td>October 18th</td>
-              <td>96,000</td>
-              <td>0</td>
-              <td>32</td>
-              <td>Retreat</td>
-            </tr>
-            <tr>
-              <th scope="row">Mojaisk</th>
-              <td>October 24th</td>
-              <td>87,000</td>
-              <td>0</td>
-              <td>32</td>
-              <td>Retreat</td>
-            </tr>
-            <tr>
-              <th scope="row">Wirma</th>
-              <td>na</td>
-              <td>55,000</td>
-              <td>na</td>
-              <td>na</td>
-              <td>Retreat</td>
-            </tr>
-            <tr>
-              <th scope="row">Smolensk</th>
-              <td>November 14th</td>
-              <td>37,000</td>
-              <td>-26</td>
-              <td>-13</td>
-              <td>Retreat</td>
-            </tr>
-            <tr>
-              <th scope="row">Orscha</th>
-              <td>na</td>
-              <td>24,000</td>
-              <td>na</td>
-              <td>na</td>
-              <td>Retreat</td>
-            </tr>
-            <tr>
-              <th scope="row">Botr</th>
-              <td>na</td>
-              <td>20,000</td>
-              <td>-14</td>
-              <td>-7</td>
-              <td>Retreat</td>
-            </tr>
-            <tr>
-              <th scope="row">Studienska (reinforcements arrive)</th>
-              <td>December 1st</td>
-              <td>50,000</td>
-              <td>-25</td>
-              <td>-13</td>
-              <td>Retreat</td>
-            </tr>
-            <tr>
-              <th scope="row">Minsk</th>
-              <td>December 1st</td>
-              <td>28,000</td>
-              <td>-30</td>
-              <td>-22</td>
-              <td>Retreat</td>
-            </tr>
-            <tr>
-              <th scope="row">Moloderno</th>
-              <td>December 6th</td>
-              <td>28,000</td>
-              <td>-38</td>
-              <td>-34</td>
-              <td>Retreat</td>
-            </tr>
-            <tr>
-              <th scope="row">Smorgeni</th>
-              <td>December 7th</td>
-              <td>12,000</td>
-              <td>-33</td>
-              <td>-27</td>
-              <td>Retreat</td>
-            </tr>
-            <tr>
-              <th scope="row">Wilna
-              </td>
-              <td>na
-              </th>
-              <td>8,000</td>
-              <td>na</td>
-              <td>na</td>
-              <td>Retreat</td>
-            </tr>
-            <tr>
-              <th scope="row">Kowno (reinforcements arrive)</th>
-              <td>December 14th</td>
-              <td>10,000</td>
-              <td>na</td>
-              <td>na</td>
-              <td>Retreat</td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
+          encountered on the return path.</caption> 
+
+        <button aria-expanded="true" aria-controls="id_long_desc">Data Table for Minard's Chart</button>
+
+        <div id="id_long_desc">
+          <h2 id="id_data_label">Data for Charles Minars's Chart of Naploean's Invasion of Russia</h2>
+          <table aria-labelledby="id_data_label">
+            <thead>
+              <tr>
+                <th scope="col">Location</th>
+                <th scope="col">Approximate Date</th>
+                <th scope="col">Size of Army</th>
+                <th scope="col">Tempature C</th>
+                <th scope="col">Tempature F</th>
+                <th scope="col">Direction</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <th scope="row">Kowno River</th>
+                <td>June 24th</td>
+                <td>442,000</td>
+                <td>na</td>
+                <td>na</td>
+                <td>Advance</td>
+              </tr>
+              <tr>
+                <th scope="row">Wilna</th>
+                <td>June 30th</td>
+                <td>400,000</td>
+                <td>na</td>
+                <td>na</td>
+                <td>Advance</td>
+              </tr>
+              <tr>
+                <th scope="row">Witebsk</th>
+                <td>na</td>
+                <td>175,000</td>
+                <td>na</td>
+                <td>na</td>
+                <td>Advance</td>
+              </tr>
+              <tr>
+                <th scope="row">Smolensk</th>
+                <td>August 16th</td>
+                <td>145,000</td>
+                <td>na</td>
+                <td>na</td>
+                <td>Advance</td>
+              </tr>
+              <tr>
+                <th scope="row">Chjat</th>
+                <td>na</td>
+                <td>127,000</td>
+                <td>na</td>
+                <td>na</td>
+                <td>Advance</td>
+              </tr>
+              <tr>
+                <th scope="row">Mojaisk</th>
+                <td>September 7th</td>
+                <td>100,000</td>
+                <td>na</td>
+                <td>na</td>
+                <td>Advance</td>
+              </tr>
+              <tr>
+                <th scope="row">Moscow</th>
+                <td>September 14th</td>
+                <td>100,000</td>
+                <td>na</td>
+                <td>na</td>
+                <td>Advance</td>
+              </tr>
+              <tr>
+                <th scope="row">Malo-jarosewli</th>
+                <td>October 18th</td>
+                <td>96,000</td>
+                <td>0</td>
+                <td>32</td>
+                <td>Retreat</td>
+              </tr>
+              <tr>
+                <th scope="row">Mojaisk</th>
+                <td>October 24th</td>
+                <td>87,000</td>
+                <td>0</td>
+                <td>32</td>
+                <td>Retreat</td>
+              </tr>
+              <tr>
+                <th scope="row">Wirma</th>
+                <td>na</td>
+                <td>55,000</td>
+                <td>na</td>
+                <td>na</td>
+                <td>Retreat</td>
+              </tr>
+              <tr>
+                <th scope="row">Smolensk</th>
+                <td>November 14th</td>
+                <td>37,000</td>
+                <td>-26</td>
+                <td>-13</td>
+                <td>Retreat</td>
+              </tr>
+              <tr>
+                <th scope="row">Orscha</th>
+                <td>na</td>
+                <td>24,000</td>
+                <td>na</td>
+                <td>na</td>
+                <td>Retreat</td>
+              </tr>
+              <tr>
+                <th scope="row">Botr</th>
+                <td>na</td>
+                <td>20,000</td>
+                <td>-14</td>
+                <td>-7</td>
+                <td>Retreat</td>
+              </tr>
+              <tr>
+                <th scope="row">Studienska (reinforcements arrive)</th>
+                <td>December 1st</td>
+                <td>50,000</td>
+                <td>-25</td>
+                <td>-13</td>
+                <td>Retreat</td>
+              </tr>
+              <tr>
+                <th scope="row">Minsk</th>
+                <td>December 1st</td>
+                <td>28,000</td>
+                <td>-30</td>
+                <td>-22</td>
+                <td>Retreat</td>
+              </tr>
+              <tr>
+                <th scope="row">Moloderno</th>
+                <td>December 6th</td>
+                <td>28,000</td>
+                <td>-38</td>
+                <td>-34</td>
+                <td>Retreat</td>
+              </tr>
+              <tr>
+                <th scope="row">Smorgeni</th>
+                <td>December 7th</td>
+                <td>12,000</td>
+                <td>-33</td>
+                <td>-27</td>
+                <td>Retreat</td>
+              </tr>
+              <tr>
+                <th scope="row">Wilna
+                </td>
+                <td>na
+                </th>
+                <td>8,000</td>
+                <td>na</td>
+                <td>na</td>
+                <td>Retreat</td>
+              </tr>
+              <tr>
+                <th scope="row">Kowno (reinforcements arrive)</th>
+                <td>December 14th</td>
+                <td>10,000</td>
+                <td>na</td>
+                <td>na</td>
+                <td>Retreat</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+
+      </figure>
     </div>
     <div role="separator" id="ex_end_sep" aria-labelledby="ex_end_sep ex_label" aria-label="End of"></div>
+  </section>
+
+  <section>
+    <h2>Accessibility Features</h2>
+    <ol>
+      <li>CSS <code>:before</code> psuedo selector with a <code>content</code> property referencing an image is used to synchronize visual state with ARIA state.</li>
+      <li>CSS <code>:focus</code> psuedo selector is used to indicate the button is interactive by changing the background color and border color when is receives or loses keyboard focus.</li>
+      <li>CSS <code>:hover</code> psuedo selector is used to indicate the button is interactive by changing the background color and underlining the button text when the mouse pointer is over the button text.</li>
+    </ol>
   </section>
 
   <section>
@@ -263,39 +276,17 @@
       </thead>
       <tbody>
         <tr>
-          <th scope="row">
-            <code>button</code>
-          </th>
-          <td></td>
-          <td>
-            <code>span</code>
-          </td>
-          <td>
-                Identifies the <code>span</code> element as a <code>button</code>.
-          </td>
-        </tr>
-        <tr>
-          <td></td>
-          <th scope="row">
-            <code>tabindex=&quot;0&quot;</code>
-          </th>
-          <td>
-            <code>span</code>
-          </td>
-          <td>
-                Includes the <code>span</code> element in the tab sequence of the page.
-          </td>
-        </tr>
-        <tr>
           <td></td>
           <th scope="row">
             <code>aria-controls=&quot;IDREF&quot;</code>
           </th>
           <td>
-            <code>span</code>
+            <code>button</code>
           </td>
           <td>
-                The disclosure button controls visibility of the container identified by the <code>IDREF</code> value.
+            <ul>
+              <li>The disclosure button controls visibility of the container identified by the <code>IDREF</code> value.</li>
+            </ul>  
           </td>
         </tr>
         <tr>
@@ -304,7 +295,7 @@
             <code>aria-expanded=&quot;false&quot;</code>
           </th>
           <td>
-            <code>span</code>
+            <code>button</code>
           </td>
           <td>
             <ul>
@@ -329,7 +320,7 @@
             <code>aria-expanded=&quot;true&quot;</code>
           </th>
           <td>
-            <code>span</code>
+            <code>button</code>
           </td>
           <td>
           <ul>
