--- a/examples/disclosure/disclosure-faq.html
+++ b/examples/disclosure/disclosure-faq.html
@@ -36,36 +36,47 @@
     <h2 id="ex_label">Example</h2>
     <div role="separator" id="ex_start_sep" aria-labelledby="ex_start_sep ex_label" aria-label="Start of" ></div>
     <div id="ex1">
-      <div class="faq">
-        <div role="button" aria-expanded="false" aria-controls="faq1_desc">What do I do if I
-          have a permit for an assigned lot, but can't find a space there?</div>
-        <div id="faq1_desc" class="desc">Park at the nearest available parking meter without paying the meter
+      <dl class="faq">
+        <dt><button aria-expanded="false" aria-controls="faq1_desc">What do I do if I
+          have a permit for an assigned lot, but can't find a space there?</button></dt>
+        <dd id="faq1_desc" class="desc">Park at the nearest available parking meter without paying the meter
           and call 999-999-9999 to report the problem. We will note and approve your alternate
-          location and will investigate the cause of the shortage in your assigned facility.</div>
+          location and will investigate the cause of the shortage in your assigned facility.</dd>
 
-        <div role="button" aria-expanded="false" aria-controls="faq2_desc">What do I do if I
-          lose my permit or if my permit is stolen?</div>
-        <div id="faq2_desc" class="desc">You should come to the Parking office and report the loss. There is
+        <dt><button aria-expanded="false" aria-controls="faq2_desc">What do I do if I
+          lose my permit or if my permit is stolen?</button></dt>
+        <dd id="faq2_desc" class="desc">You should come to the Parking office and report the loss. There is
           a fee to replace your lost permit. However, if your permit was stolen, a copy of a police
           report needs to be submitted along with a stolen parking permit form for a fee replacement
-          exemption.</div>
+          exemption.</dd>
 
-        <div role="button" aria-expanded="false" aria-controls="faq3_desc">Is there free parking
-          on holidays?</div>
-        <div id="faq3_desc" class="desc">All facilities are restricted from 2:00 am - 6:00 am on all days. No
+        <dt><button aria-expanded="false" aria-controls="faq3_desc">Is there free parking
+          on holidays?</button></dt>
+        <dd id="faq3_desc" class="desc">All facilities are restricted from 2:00 am - 6:00 am on all days. No
           exceptions are made for any holiday or recess except those officially listed as a
           ”Holidays” in the calendar. Please note: 24-hour rental spaces, 24-hour rental lots, and
-          disabled parking is enforced at all times.</div>
+          disabled parking is enforced at all times.</dd>
 
-        <div role="button" aria-expanded="false" aria-controls="faq4_desc">Do all parking
-          facilities have the same enforcement rules?</div>
-        <div id="faq4_desc" class="desc">Some parking facility restrictions differ from others. Be sure to
-          take note of the signs at each lot entrance.</div>
+        <dt><button aria-expanded="false" aria-controls="faq4_desc">Do all parking
+          facilities have the same enforcement rules?</button></dt>
+        <dd id="faq4_desc" class="desc">Some parking facility restrictions differ from others. Be sure to
+          take note of the signs at each lot entrance.</dd>
 
       </dl>
     </div>
     <div role="separator" id="ex_end_sep" aria-labelledby="ex_end_sep ex_label" aria-label="End of"></div>
   </section>
+
+  <section>
+    <h2>Accessibility Features</h2>
+    <ol>
+      <li>The use of native semantics of the <code>dl</code>, <code>dt</code> and <code>dd</code> elements provides information that the FAQs are a list of items each with a title and description.  It is important not to override these elements with any other role (e.g. <code>button</code>).</dd>
+      <li>CSS <code>:before</code> psuedo selector with a <code>content</code> property referencing an image is used to synchronize visual state with ARIA state.</li>
+      <li>CSS <code>:focus</code> psuedo selector is used to indicate the button is interactive by changing the background color and border color when is receives or loses keyboard focus.</li>
+      <li>CSS <code>:hover</code> psuedo selector is used to indicate the button is interactive by changing the background color and underlining the button text when the mouse pointer is over the button text.</li>
+    </ol>
+  </section>
+
   <section>
     <h2 id="kbd_label">Keyboard Support</h2>
     <table aria-labelledby="kbd_label">
@@ -112,36 +123,12 @@
       </thead>
       <tbody>
         <tr>
-          <th scope="row">
-            <code>button</code>
-          </th>
-          <td></td>
-          <td>
-            <code>span</code>
-          </td>
-          <td>
-                Identifies the <code>span</code> element as a <code>button</code>.
-          </td>
-        </tr>
-        <tr>
-          <td></td>
-          <th scope="row">
-            <code>tabindex=&quot;0&quot;</code>
-          </th>
-          <td>
-            <code>span</code>
-          </td>
-          <td>
-                Includes the <code>span</code> element in the tab sequence of the page.
-          </td>
-        </tr>
-        <tr>
           <td></td>
           <th scope="row">
             <code>aria-controls=&quot;IDREF&quot;</code>
           </th>
           <td>
-            <code>span</code>
+            <code>button</code>
           </td>
           <td>
                 The disclosure button controls visibility of the container identified by the <code>IDREF</code> value.
@@ -153,7 +140,7 @@
             <code>aria-expanded=&quot;false&quot;</code>
           </th>
           <td>
-            <code>span</code>
+            <code>button</code>
           </td>
           <td>
             <ul>
@@ -178,7 +165,7 @@
             <code>aria-expanded=&quot;true&quot;</code>
           </th>
           <td>
-            <code>span</code>
+            <code>button</code>
           </td>
           <td>
           <ul>
