--- a/examples/disclosure/disclosure-faq.html
+++ b/examples/disclosure/disclosure-faq.html
@@ -37,31 +37,46 @@
     <div role="separator" id="ex_start_sep" aria-labelledby="ex_start_sep ex_label" aria-label="Start of" ></div>
     <div id="ex1">
       <dl class="faq">
-        <dt><button aria-expanded="false" aria-controls="faq1_desc">What do I do if I
-          have a permit for an assigned lot, but can't find a space there?</button></dt>
-        <dd id="faq1_desc" class="desc">Park at the nearest available parking meter without paying the meter
-          and call 999-999-9999 to report the problem. We will note and approve your alternate
-          location and will investigate the cause of the shortage in your assigned facility.</dd>
-
-        <dt><button aria-expanded="false" aria-controls="faq2_desc">What do I do if I
-          lose my permit or if my permit is stolen?</button></dt>
-        <dd id="faq2_desc" class="desc">You should come to the Parking office and report the loss. There is
-          a fee to replace your lost permit. However, if your permit was stolen, a copy of a police
-          report needs to be submitted along with a stolen parking permit form for a fee replacement
-          exemption.</dd>
-
-        <dt><button aria-expanded="false" aria-controls="faq3_desc">Is there free parking
-          on holidays?</button></dt>
-        <dd id="faq3_desc" class="desc">All facilities are restricted from 2:00 am - 6:00 am on all days. No
-          exceptions are made for any holiday or recess except those officially listed as a
-          ”Holidays” in the calendar. Please note: 24-hour rental spaces, 24-hour rental lots, and
-          disabled parking is enforced at all times.</dd>
-
-        <dt><button aria-expanded="false" aria-controls="faq4_desc">Do all parking
-          facilities have the same enforcement rules?</button></dt>
-        <dd id="faq4_desc" class="desc">Some parking facility restrictions differ from others. Be sure to
-          take note of the signs at each lot entrance.</dd>
-
+        <dt>
+          <button aria-expanded="false" aria-controls="faq1_desc">What do I do if I have a permit for an assigned lot, but can't find a space there?</button>
+        </dt>
+        <dd>
+          <p id="faq1_desc" class="desc">
+            Park at the nearest available parking meter without paying the meter
+            and call 999-999-9999 to report the problem. We will note and approve your alternate
+            location and will investigate the cause of the shortage in your assigned facility.
+          </p>
+        </dd>
+        <dt>
+          <button aria-expanded="false" aria-controls="faq2_desc">What do I do if I lose my permit or if my permit is stolen?</button>
+        </dt>
+        <dd>
+          <p id="faq2_desc" class="desc">You should come to the Parking office and report the
+            loss. There is a fee to replace your lost permit. However, if your permit was stolen, a
+            copy of a police report needs to be submitted along with a stolen parking permit form for
+            a fee replacement exemption.
+          </p>
+        </dd>
+        <dt>
+          <button aria-expanded="false" aria-controls="faq3_desc">Is there free parking on holidays?</button>
+        </dt>
+        <dd>
+          <p id="faq3_desc" class="desc">
+            All facilities are restricted from 2:00 am - 6:00 am on all days. No
+            exceptions are made for any holiday or recess except those officially listed as a
+            <q>Holidays</q> in the calendar. Please note: 24-hour rental spaces, 24-hour rental lots, and
+            disabled parking is enforced at all times.
+          </p>
+        </dd>
+        <dt>
+          <button aria-expanded="false" aria-controls="faq4_desc">Do all parking facilities have the same enforcement rules?</button>
+        </dt>
+        <dd>
+          <p id="faq4_desc" class="desc">
+            Some parking facility restrictions differ from others. Be sure to
+            take note of the signs at each lot entrance.
+          </p>
+        </dd>
       </dl>
     </div>
     <div role="separator" id="ex_end_sep" aria-labelledby="ex_end_sep ex_label" aria-label="End of"></div>
@@ -70,10 +85,18 @@
   <section>
     <h2>Accessibility Features</h2>
     <ol>
-      <li>The use of native semantics of the <code>dl</code>, <code>dt</code> and <code>dd</code> elements provides information that the FAQs are a list of items each with a title and description.  It is important not to override these elements with any other role (e.g. <code>button</code>).</dd>
-      <li>CSS <code>:before</code> psuedo selector with a <code>content</code> property referencing an image is used to synchronize visual state with ARIA state.</li>
-      <li>CSS <code>:focus</code> psuedo selector is used to indicate the button is interactive by changing the background color and border color when is receives or loses keyboard focus.</li>
-      <li>CSS <code>:hover</code> psuedo selector is used to indicate the button is interactive by changing the background color and underlining the button text when the mouse pointer is over the button text.</li>
+      <li>
+        The semantic structure of the FAQ is conveyed with native <code>dl</code>, <code>dt</code> and <code>dd</code> elements.
+        So that the list structure is communicated to assistive technologies, instead of applying a button role to the <code>dt</code> element, a <code>button</code> element is contained within the <code>dd</code> element.
+        Similarly, the container for the answer content that is shown and hidden is inside of the <code>dd</code> element so the <code>dl</code> structure is complete even when the answers are all hidden.
+      </li>
+      <li> The visual indication of expanded and collapsed states is synchronized with the value of <code>aria-expanded</code> using a CSS atribute selector and <code>:before</code> pseudo element that generates an image with the <code>content</code> property.</li>
+      <li>The interactivity of the question is visually indicated on focus and hover:
+        <ul>
+          <li>The CSS <code>:focus</code> pseudo class is used to change the background and border colors.</li>
+          <li>The CSS <code>:hover</code> pseudo class is used to change the background color and underline the text.</li>
+        </ul>
+      </li>
     </ol>
   </section>
 
@@ -153,7 +176,7 @@
                 attribute.
               </li>
               <li>
-                The visual indicator of the show/hide state is created using the CSS <code>:before</code> pseudo selector and the <code>content</code> property
+                The visual indicator of the show/hide state is created using CSS <code>:before</code> pseudo element and <code>content</code> property
                 so the image is reliably rendered in high contrast mode of operating systems and browsers.
               </li>
             </ul>
@@ -178,7 +201,7 @@
                 attribute.
               </li>
               <li>
-                The visual indicator of the show/hide state is created using the CSS <code>:before</code> pseudo selector and the <code>content</code> property
+                The visual indicator of the show/hide state is created using CSS <code>:before</code> pseudo element and <code>content</code> property
                 so the image is reliably rendered in high contrast mode of operating systems and browsers.
               </li>
             </ul>
@@ -205,15 +228,11 @@
 
   <section>
     <h2 id="sc1_label">HTML Source Code</h2>
-    <div role="separator" id="sc1_start_sep" aria-labelledby="sc1_start_sep sc1_label"
-      aria-label="Start of"
-    ></div>
+    <div role="separator" id="sc1_start_sep" aria-labelledby="sc1_start_sep sc1_label" aria-label="Start of" ></div>
     <div id="sc1"></div>
-    <div role="separator" id="sc1_end_sep" aria-labelledby="sc1_end_sep sc1_label"
-      aria-label="End of"
-    ></div>
+    <div role="separator" id="sc1_end_sep" aria-labelledby="sc1_end_sep sc1_label" aria-label="End of" ></div>
     <script>
-          sourceCode.adiv('sc1', 'ex1');
+          sourceCode.add('sc1', 'ex1');
           sourceCode.make();
         </script>
   </section>
