--- a/examples/tabs/tabs-2/tabs.html
+++ b/examples/tabs/tabs-2/tabs.html
@@ -10,13 +10,13 @@
     <script src="../../js/examples.js" type="text/javascript"></script>
 
     <!--  js and css for this example. -->
-    <link href="css/tabs.css" rel="stylesheet">
+    <link href="../css/tabs.css" rel="stylesheet">
   </head>
   <body>
     <main>
       <h1>Tabs With Manual Activation</h1>
       <p>
-        Please provide feedback on updates to this page in 
+        Please provide feedback on updates to this page in
         <a href="https://github.com/w3c/aria-practices/issues/279">issue 279.</a>
       </p>
       <p>
@@ -37,7 +37,7 @@
           <div class="tabs">
             <div role="tablist" aria-label="Entertainment">
               <button role="tab" aria-selected="true" aria-controls="nils-tab" id="nils">Nils Frahm</button>
-              <button role="tab" aria-selected="false" aria-controls="helios-tab" id="helios" tabindex="-1">Helios</button>
+              <button role="tab" aria-selected="false" aria-controls="agnes-tab" id="agnes" tabindex="-1">Agnes Obel</button>
               <button role="tab" aria-selected="false" aria-controls="complexcomplex" id="complex" tabindex="-1" data-deletable>Joke</button>
             </div>
 
@@ -45,8 +45,8 @@
               <p>Nils Frahm is a German musician, composer and record producer based in Berlin. He is known for combining classical and electronic music and for an unconventional approach to the piano in which he mixes a grand piano, upright piano, Roland Juno-60, Rhodes piano, drum machine, and Moog Taurus.</p>
             </div>
 
-            <div tabindex="0" role="tabpanel" id="helios-tab" aria-labelledby="helios" hidden>
-              <p>Helios (Keith Kenniff) is an American composer, multi-instrumentalist, and electronic music producer. He composes ambient/electronic music under the moniker Helios and post-classical piano music under Goldmund. He is also one half of the indie band Mint Julep, and ambient project "A Pale Fire". Keith is also a composer for film, television, dance and performance art. In 2010 he created the record label Unseen.</p>
+            <div tabindex="0" role="tabpanel" id="agnes-tab" aria-labelledby="agnes" hidden>
+              <p>Agnes Caroline Thaarup Obel is a Danish singer/songwriter. Her first album, Philharmonics, was released by PIAS Recordings on 4 October 2010 in Europe. Philharmonics was certified gold in June 2011 by the Belgian Entertainment Association (BEA) for sales of 10,000 Copies.</p>
             </div>
 
             <div tabindex="0" role="tabpanel" id="complexcomplex" aria-labelledby="complex" hidden>
@@ -60,10 +60,8 @@
 
       <section>
         <h2>Accessibility Features</h2>
-        <section>
-        <h2>Accessibility Features</h2>
         <p>
-          To demonstrate the effects of deleting a tab, the third tab, labeled <q>Joke</q>, 
+          To demonstrate the effects of deleting a tab, the third tab, labeled <q>Joke</q>,
           can be deleted when it has focus by pressing <kbd>Delete</kbd>.
         </p>
       </section>
@@ -321,6 +319,6 @@
     </nav>
 
     <script src="js/tabs.js" type="text/javascript"></script>
-    
+
   </body>
 </html>
