--- a/examples/tabs/tabs-1/tabs.html
+++ b/examples/tabs/tabs-1/tabs.html
@@ -21,13 +21,13 @@
       <nav aria-label="Breadcrumb" class="breadcrumb">
         <ol>
           <li>
-            <a href="../../">WAI-ARIA Authoring Practices 1.1</a>
+            <a href="../../../">WAI-ARIA Authoring Practices 1.1</a>
           </li>
           <li>
-            <a href="../../#aria_ex">Design Patterns</a>
+            <a href="../../../#aria_ex">Design Patterns</a>
           </li>
           <li>
-            <a href="../../#tabpanel">Tabs Pattern</a>
+            <a href="../../../#tabpanel">Tabs Pattern</a>
           </li>
           <li>
             <a href="./tabs.html" aria-current="page">Tabs With Automatic Activation</a>
