New design for code example pages

--- a/examples/coding-template/Depricated-MultipleImplementationExample-Template.html
+++ b/examples/coding-template/Depricated-MultipleImplementationExample-Template.html
@@ -204,7 +204,7 @@
       Update this table to describe how roles, properties, states, and tabindex are used in this example.  
       If the content will vary significantly for the above implementations, make this a level 4 section inside each of the above level 3 implementation sections.
     -->
-    <table aria-labelledby="rps_label">
+    <table aria-labelledby="rps_label" class="data attributes">
       <thead>
         <tr>
           <th>Attribute</th>
@@ -254,7 +254,7 @@
     <h2>HTML Source Code</h2>
     <h3 id="sc1_label">Example 1: title of this variation of the implementation</h3>
     <div id="sc1_start_sep" role="separator" aria-labelledby="sc1_start_sep sc1_label" aria-label="Start of HTML for" ></div>
-    <pre id="sc1"></pre>
+    <pre><code id="sc1"></code></pre>
     <div id="sc1_end_sep" role="separator" aria-labelledby="sc1_end_sep sc1_label" aria-label="End of HTML for" ></div>
     <!-- 
       The following script will show the reader the HTML source for the example that is in the div with ID 'ex1'.
