--- a/examples/alert/index.html
+++ b/examples/alert/index.html
@@ -5,8 +5,11 @@
     <title>Alert Example | WAI-ARIA Authoring Practices 1.1</title>
 
     <!--  Core js and css shared by all examples; do not modify when using this template. -->
-    <link href="../css/core.css" rel="stylesheet">
-    <link href="../css/table.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://www.w3.org/StyleSheets/TR/2016/base.css">
+    <link rel="stylesheet" href="../css/core.css">
+    <script src="../js/examples.js"></script>
+    <script src="../js/highlight.pack.js"></script>
+    <script src="../js/app.js"></script>
 
     <!--  js and css for this example. -->
     <link href="css/alert.css" rel="stylesheet">
@@ -55,7 +58,7 @@
 
     <section>
       <h2 id="rps_label">Role, Property, State, and Tabindex  Attributes</h2>
-      <table aria-labelledby="rps_label">
+      <table aria-labelledby="rps_label" class="data attributes">
         <thead>
           <tr>
             <th scope="col">Role</th>
