--- a/examples/breadcrumb/index.html
+++ b/examples/breadcrumb/index.html
@@ -4,9 +4,13 @@
     <meta charset="utf-8" />
     <title>Breadcrumb Example | WAI-ARIA Authoring Practices 1.1</title>
 
-    <link href="../css/core.css" rel="stylesheet">
-    <link href="../css/table.css" rel="stylesheet">
-    <script src="../js/examples.js" type="text/javascript"></script>
+    <!--  Core js and css shared by all examples; do not modify when using this template. -->
+    <link rel="stylesheet" href="https://www.w3.org/StyleSheets/TR/2016/base.css">
+    <link rel="stylesheet" href="../css/core.css">
+    <script src="../js/examples.js"></script>
+    <script src="../js/highlight.pack.js"></script>
+    <script src="../js/app.js"></script>
+
     <link href="css/breadcrumb.css" rel="stylesheet">
   </head>
   <body>
@@ -61,7 +65,7 @@
 
     <section>
       <h2 id="rps_label">Role, Property, State, and Tabindex  Attributes</h2>
-      <table aria-labelledby="rps_label">
+      <table aria-labelledby="rps_label" class="data attributes">
         <thead>
           <tr>
             <th scope="col">Role</th>
@@ -112,7 +116,7 @@
     <section>
       <h2 id="sc1_label">HTML Source Code</h2>
       <div role="separator" id="sc1_start_sep" aria-labelledby="sc1_start_sep sc1_label" aria-label="Start of"></div>
-      <pre id="sc1"></pre>
+      <pre><code id="sc1"></code></pre>
       <div role="separator" id="sc1_end_sep" aria-labelledby="sc1_end_sep sc1_label" aria-label="End of"></div>
       <script>
         sourceCode.add('sc1', 'ex1');
