--- a/examples/checkbox/checkbox-1/checkbox-1.html
+++ b/examples/checkbox/checkbox-1/checkbox-1.html
@@ -4,12 +4,15 @@
   <meta charset="utf-8" />
   <title>Checkbox Example (Two State) | WAI-ARIA Authoring Practices 1.1</title>
 
-  <link href="../../css/core.css" rel="stylesheet">
-  <link href="../../css/table.css" rel="stylesheet">
-  <script src="../../js/examples.js" type="text/javascript"></script>
-  
+  <!--  Core js and css shared by all examples; do not modify when using this template. -->
+  <link rel="stylesheet" href="https://www.w3.org/StyleSheets/TR/2016/base.css">
+  <link rel="stylesheet" href="../../css/core.css">
+  <script src="../../js/examples.js"></script>
+  <script src="../../js/highlight.pack.js"></script>
+  <script src="../../js/app.js"></script>
+
   <link href="css/checkbox.css" rel="stylesheet">
-  
+
   <script src="js/checkbox.js" type="text/javascript"></script>
 </head>
 <body>
@@ -38,7 +41,7 @@
         </div>
 
         <script type="text/javascript">
-          window.onload=function() {
+          window.onload = function () {
 
             var checkboxes = document.querySelectorAll('[role="checkbox"]');
 
@@ -47,10 +50,10 @@
               cb.init();
             }
 
-          }    
+          };
         </script>
 
-      </div>  
+      </div>
 
       <div role="separator" id="ex_end_sep" aria-labelledby="ex_end_sep ex_label" aria-label="End of"></div>
 
@@ -58,7 +61,7 @@
 
      <section>
         <h2 id="kbd_label">Keyboard Support</h2>
-        <table aria-labelledby="kbd_label"> 
+        <table aria-labelledby="kbd_label" class="def">
           <thead>
             <tr>
               <th>Key</th>
@@ -71,24 +74,24 @@
             <td>
               <ul>
                 <li>Moves keyboard focus to the <code>checkbox</code>.</li>
-              </ul>  
+              </ul>
             </td>
           </tr>
             <tr>
               <th><kbd>Space</kbd></th>
               <td>
                 <ul>
-                  <li>Toggle check checkbox between checked and unchecked.</li>  
-                </ul>  
+                  <li>Toggle check checkbox between checked and unchecked.</li>
+                </ul>
               </td>
             </tr>
           </tbody>
         </table>
       </section>
- 
-    <section>   
+
+    <section>
       <h2 id="rps_label">Role, Property, State, and Tabindex  Attributes</h2>
-      <table aria-labelledby="rps_label">
+      <table aria-labelledby="rps_label" class="data attributes">
         <thead>
           <tr>
             <th scope="col">Role</th>
@@ -107,7 +110,7 @@
                   <li>The <code>role=&quot;checkbox&quot;</code> attribute identifies the <code>div</code> element as a ARIA <code>checkbox</code>.</li>
                   <li>The accessible name comes the child text content of the <code>div[role=&quot;checkbox&quot;]</code> element.</li>
                   <li>The <code>checkbox</code> widget needs a <code>tabindex=&quot;0&quot;</code> value.</li>
-                </ul> 
+                </ul>
               </td>
             </tr>
             <tr>
@@ -117,7 +120,7 @@
               <td>
                   <ul>
                     <li>The <code>div[&quot;checkbox&quot;]</code> is identified as an ineractive element and is added to the tab order of the page by setting the <code>tabindex=&quot;0&quot;</code>.</li>
-                   </ul>  
+                   </ul>
               </td>
             </tr>
             <tr>
@@ -129,7 +132,7 @@
                     <li>Indentifies the <code>checkbox</code> button as unchecked.</li>
                     <li>CSS attribute selectors (e.g. <code>[aria-checked=&quot;false&quot;]</code>) are used to synchronize the visual states with the value of the <code>aria-checked</code> attribute.</li>
                     <li>The CSS <code>:before</code> psuedo selector and the <code>content</code> property are used to indcate visual state of "unchecked" to support high contrast setting in operating systems and browsers.</li>
-                  </ul>  
+                  </ul>
               </td>
             </tr>
             <tr>
@@ -141,13 +144,13 @@
                     <li>Indentifies the <code>checkbox</code> as checked.</li>
                     <li>CSS attribute selectors (e.g. <code>[aria-checked=&quot;true&quot;]</code>) are used to synchronize the visual states with the value of the <code>aria-checked</code> attribute.</li>
                     <li>The CSS <code>:before</code> psuedo selector and the <code>content</code> property are used to indcate visual state of "checked" to support high contrast setting in operating systems and browsers.</li>
-                  </ul>  
+                  </ul>
               </td>
             </tr>
         </tbody>
       </table>
     </section>
-  
+
   <section>
     <h2>Javascript and CSS Source Code</h2>
     <ul>
@@ -164,7 +167,7 @@
     <h2>HTML Source Code</h2>
     <h3 id="sc1_label">Simple Two-State Checkbox Example</h3>
     <div id="sc1_start_sep" role="separator" aria-labelledby="sc1_start_sep sc1_label" aria-label="Start of HTML for"></div>
-    <div id="sc1"></div>
+    <pre><code id="sc1"></code></pre>
     <div id="sc1_end_sep" role="separator" aria-labelledby="sc1_end_sep sc1_label" aria-label="End of HTML for"></div>
 
     <script>
@@ -172,7 +175,7 @@
         sourceCode.make();
     </script>
   </section>
-  </main>  
+  </main>
   <nav>
     <a href="../../../#checkbox">Checkbox Design Pattern in WAI-ARIA Authoring Practices 1.1</a>
   </nav>
