--- a/examples/checkbox/checkbox-2/checkbox-2.html
+++ b/examples/checkbox/checkbox-2/checkbox-2.html
@@ -3,10 +3,13 @@
   <head>
     <meta charset="utf-8" />
     <title>Checkbox Example (Mixed State) | WAI-ARIA Authoring Practices 1.1</title>
-    <link href="../../css/core.css" rel="stylesheet">
-    <link href="../../css/table.css" rel="stylesheet">
 
-    <script src="../../js/examples.js" type="text/javascript"></script>
+    <!--  Core js and css shared by all examples; do not modify when using this template. -->
+    <link rel="stylesheet" href="https://www.w3.org/StyleSheets/TR/2016/base.css">
+    <link rel="stylesheet" href="../../css/core.css">
+    <script src="../../js/examples.js"></script>
+    <script src="../../js/highlight.pack.js"></script>
+    <script src="../../js/app.js"></script>
 
     <link href="css/checkboxMixed.css" rel="stylesheet">
 
@@ -54,15 +57,15 @@
 
           <script type="text/javascript">
 
-            function checkboxFocus(event) {
+            function checkboxFocus (event) {
               event.currentTarget.parentNode.classList.add('focus');
             };
 
-            function checkboxBlur(event) {
+            function checkboxBlur (event) {
               event.currentTarget.parentNode.classList.remove('focus');
             };
 
-            window.onload=function() {
+            window.onload = function () {
               var i;
 
               var mixed = document.querySelectorAll('[role="checkbox"]');
@@ -80,7 +83,7 @@
                 cb.addEventListener('blur', checkboxBlur);
               }
 
-            }
+            };
           </script>
 
         </div>
@@ -92,7 +95,7 @@
 
       <section>
         <h2 id="kbd_label">Keyboard Support</h2>
-        <table aria-labelledby="kbd_label">
+        <table aria-labelledby="kbd_label" class="def">
           <thead>
             <tr>
               <th>Key</th>
@@ -127,7 +130,7 @@
 
         <h2 id="rps_label">Role, Property, State, and Tabindex  Attributes</h2>
 
-        <table aria-labelledby="rps_label">
+        <table aria-labelledby="rps_label" class="data attributes">
           <thead>
             <tr>
               <th scope="col">Role</th>
@@ -229,7 +232,7 @@
       <section>
         <h2 id="sc1_label">HTML Source Code</h2>
         <div role="separator" id="sc1_start_sep" aria-labelledby="sc1_start_sep sc1_label" aria-label="Start of"></div>
-        <div id="sc1"></div>
+        <pre><code id="sc1"></code></pre>
         <div role="separator" id="sc1_end_sep" aria-labelledby="sc1_end_sep sc1_label" aria-label="End of"></div>
 
         <script>
