--- a/examples/combobox/aria1.0pattern/combobox-autocomplete-both.html
+++ b/examples/combobox/aria1.0pattern/combobox-autocomplete-both.html
@@ -5,9 +5,11 @@
 <title>Example of Legacy ARIA 1.0 Combobox With Both List and Inline Autocompletion | WAI-ARIA Authoring Practices 1.1</title>
 
 <!--  Core js and css shared by all examples; do not modify when using this template. -->
-<link href="../css/core.css" rel="stylesheet">
-<link href="../css/table.css" rel="stylesheet">
-<script src="../js/examples.js" type="text/javascript"></script>
+<link rel="stylesheet" href="https://www.w3.org/StyleSheets/TR/2016/base.css">
+<link rel="stylesheet" href="../../css/core.css">
+<script src="../../js/examples.js"></script>
+<script src="../../js/highlight.pack.js"></script>
+<script src="../../js/app.js"></script>
 
 <!--  js and css for this example. -->
 <link href="css/combobox-1.0.css" rel="stylesheet">
@@ -49,9 +51,7 @@
         <li>The HTML in this section along with the javascript and CSS it uses demonstrate
           the design pattern.</li>
         <li>
-          When developing an example implementation for this guide, please follow the
-          <a href="https://ianpouncey.github.io/code-guide/">APG example coding guidelines</a>
-          .
+          When developing an example implementation for this guide, please follow the <a href="https://ianpouncey.github.io/code-guide/">APG example coding guidelines</a>.
         </li>
         <!--  Target of previous link will need to be updated when we move the guidelines into the wiki from Ian's repo.  -->
       </ul>
@@ -73,7 +73,7 @@
 
   <section>
     <h2 id="kbd_label">Keyboard Support</h2>
-    <!-- 
+    <!--
       List the keys supported in this example.
       Remember to:
       Use kbd tags,e.g. <kbd>KeyName</kbd>.
@@ -83,7 +83,7 @@
       One key per row, e.g., do not combine <kbd>Up Arrow</kbd> and <kbd>Down Arrow</kbd> into a single row.
       Do not use the word "key", e.g., do not write <kbd>Enter Key</kbd> or <kbd>Enter</kbd> key.
      -->
-    <table aria-labelledby="kbd_label">
+    <table aria-labelledby="kbd_label" class="def">
       <thead>
         <tr>
           <th>Key</th>
@@ -115,9 +115,9 @@
   <section>
     <h2 id="rps_label">Role, Property, State, and Tabindex  Attributes</h2>
     <!--
-      Update this table to describe how roles, properties, states, and tabindex are used in this example.  
+      Update this table to describe how roles, properties, states, and tabindex are used in this example.
     -->
-    <table aria-labelledby="rps_label">
+    <table aria-labelledby="rps_label" class="data attributes">
       <thead>
         <tr>
           <th scope="col">Role</th>
@@ -137,7 +137,7 @@
         </tr>
         <tr>
           <td>
-            <!--  Leave this cell blank in rows that describe attributes applied to the element with the previously described role. 
+            <!--  Leave this cell blank in rows that describe attributes applied to the element with the previously described role.
               Make a row like this for each attribute/value pair.
           -->
           </td>
@@ -173,7 +173,7 @@
   <section>
     <h2 id="sc1_label">HTML Source Code</h2>
     <div role="separator" id="sc1_start_sep" aria-labelledby="sc1_start_sep sc1_label" aria-label="Start of"></div>
-    <pre id="sc1"></pre>
+    <pre><code id="sc1"></code></pre>
     <div role="separator" id="sc1_end_sep" aria-labelledby="sc1_end_sep sc1_label" aria-label="End of"></div>
     <!--
       The following script will show the reader the HTML source for the example that is in the div with ID 'ex1'.
