--- a/examples/disclosure/disclosure-faq.html
+++ b/examples/disclosure/disclosure-faq.html
@@ -4,12 +4,16 @@
 <meta charset="utf-8" />
 <title>Example Disclosure (Show/Hide) for Answers to Frequently Asked Questions | WAI-ARIA Authoring
   Practices 1.1</title>
-<link href="../css/core.css" rel="stylesheet">
-<link href="../css/table.css" rel="stylesheet">
-<script src="../js/examples.js" type="text/javascript"></script>
 
-<link href="css/disclosure-faq.css" rel="stylesheet">
-<script src="js/disclosureButton.js" type="text/javascript"></script>
+  <!--  Core js and css shared by all examples; do not modify when using this template. -->
+  <link rel="stylesheet" href="https://www.w3.org/StyleSheets/TR/2016/base.css">
+  <link rel="stylesheet" href="../css/core.css">
+  <script src="../js/examples.js"></script>
+  <script src="../js/highlight.pack.js"></script>
+  <script src="../js/app.js"></script>
+
+  <link href="css/disclosure-faq.css" rel="stylesheet">
+  <script src="js/disclosureButton.js" type="text/javascript"></script>
 
 </head>
 <body>
@@ -100,7 +104,7 @@
 
   <section>
     <h2 id="kbd_label">Keyboard Support</h2>
-    <table aria-labelledby="kbd_label">
+    <table aria-labelledby="kbd_label" class="def">
       <thead>
         <tr>
           <th>Key</th>
@@ -123,7 +127,7 @@
           </th>
           <td>
               <li>
-              Activates the disclosure button, 
+              Activates the disclosure button,
               which toggles the visibility of the answer to the question.
           </td>
         </tr>
@@ -133,7 +137,7 @@
 
   <section>
     <h2 id="rps_label">Role, Property, State, and Tabindex Attributes</h2>
-    <table aria-labelledby="rps_label">
+    <table aria-labelledby="rps_label" class="data attributes">
       <thead>
         <tr>
           <th scope="col">Role</th>
@@ -227,12 +231,12 @@
   <section>
     <h2 id="sc1_label">HTML Source Code</h2>
     <div role="separator" id="sc1_start_sep" aria-labelledby="sc1_start_sep sc1_label" aria-label="Start of" ></div>
-    <div id="sc1"></div>
+    <pre><code id="sc1"></code></pre>
     <div role="separator" id="sc1_end_sep" aria-labelledby="sc1_end_sep sc1_label" aria-label="End of" ></div>
     <script>
-          sourceCode.add('sc1', 'ex1');
-          sourceCode.make();
-        </script>
+      sourceCode.add('sc1', 'ex1');
+      sourceCode.make();
+    </script>
   </section>
   </main>
   <nav>
