--- a/examples/disclosure/disclosure-img-long-description.html
+++ b/examples/disclosure/disclosure-img-long-description.html
@@ -3,9 +3,13 @@
 <head>
 <meta charset="utf-8" />
 <title>Example Disclosure (Show/Hide) for Image Description | WAI-ARIA Authoring Practices 1.1</title>
-<link href="../css/core.css" rel="stylesheet">
-<link href="../css/table.css" rel="stylesheet">
-<script src="../js/examples.js" type="text/javascript"></script>
+
+<!--  Core js and css shared by all examples; do not modify when using this template. -->
+<link rel="stylesheet" href="https://www.w3.org/StyleSheets/TR/2016/base.css">
+<link rel="stylesheet" href="../css/core.css">
+<script src="../js/examples.js"></script>
+<script src="../js/highlight.pack.js"></script>
+<script src="../js/app.js"></script>
 
 <link href="css/disclosure-img-long-description.css" rel="stylesheet">
 <script src="js/disclosureButton.js" type="text/javascript"></script>
@@ -15,7 +19,7 @@
   <main>
   <h1>Example Disclosure (Show/Hide) for Image Description</h1>
   <p>
-    Please provide feedback on this example in 
+    Please provide feedback on this example in
     <a href="https://github.com/w3c/aria-practices/issues/264">issue 264.</a>
   </p>
   <p>
@@ -36,16 +40,16 @@
       <figure>
 
         <img src="images/minard.png" aria-labelledby="id_short_desc" />
-      
+
         <caption id="id_short_desc"> Charles Minard's 1869 chart showing the number of men in
           Napoleon’s 1812 Russian campaign army, their movements, as well as the temperature they
-          encountered on the return path.</caption> 
+          encountered on the return path.</caption>
 
         <button aria-expanded="true" aria-controls="id_long_desc">Data Table for Minard's Chart</button>
 
         <div id="id_long_desc">
           <h3 id="id_data_label">Data for Charles Minars's Chart of Naploean's Invasion of Russia</h3>
-          <table aria-labelledby="id_data_label">
+          <table aria-labelledby="id_data_label" class="data">
             <thead>
               <tr>
                 <th scope="col">Location</th>
@@ -235,7 +239,7 @@
 
   <section>
     <h2 id="kbd_label">Keyboard Support</h2>
-    <table aria-labelledby="kbd_label">
+    <table aria-labelledby="kbd_label" class="def">
       <thead>
         <tr>
           <th>Key</th>
@@ -258,7 +262,7 @@
           </th>
           <td>
               <li>
-              Activates the disclosure button, 
+              Activates the disclosure button,
               which toggles the visibility of the long description.
           </td>
         </tr>
@@ -268,7 +272,7 @@
 
   <section>
     <h2 id="rps_label">Role, Property, State, and Tabindex Attributes</h2>
-    <table aria-labelledby="rps_label">
+    <table aria-labelledby="rps_label" class="data attributes">
       <thead>
         <tr>
           <th scope="col">Role</th>
@@ -289,7 +293,7 @@
           <td>
             <ul>
               <li>The disclosure button controls visibility of the container identified by the <code>IDREF</code> value.</li>
-            </ul>  
+            </ul>
           </td>
         </tr>
         <tr>
@@ -306,7 +310,7 @@
                 Indicates that the container controlled by the disclosure button is <em>hidden </em>.
               </li>
               <li>
-                CSS attribute selectors (e.g. <code>[aria-expanded=&quot;false&quot;]</code>) 
+                CSS attribute selectors (e.g. <code>[aria-expanded=&quot;false&quot;]</code>)
                 synchronize the visual states with the value of the <code>aria-expanded</code>
                 attribute.
               </li>
@@ -331,7 +335,7 @@
                 Indicates that the container controlled by the disclosure button is <em>visible</em>.
               </li>
               <li>
-                CSS attribute selectors (e.g. <code>[aria-expanded=&quot;true&quot;]</code>) 
+                CSS attribute selectors (e.g. <code>[aria-expanded=&quot;true&quot;]</code>)
                 synchronize the visual states with the value of the <code>aria-expanded</code>
                 attribute.
               </li>
@@ -365,15 +369,15 @@
     <div role="separator" id="sc1_start_sep" aria-labelledby="sc1_start_sep sc1_label"
       aria-label="Start of"
     ></div>
-    <div id="sc1"></div>
+    <pre><code id="sc1"></code></pre>
     <div role="separator" id="sc1_end_sep" aria-labelledby="sc1_end_sep sc1_label"
       aria-label="End of"
     ></div>
 
     <script>
-          sourceCode.add('sc1', 'ex1');
-          sourceCode.make();
-        </script>
+      sourceCode.add('sc1', 'ex1');
+      sourceCode.make();
+    </script>
   </section>
   </main>
   <nav>
