--- a/examples/feed/feed.html
+++ b/examples/feed/feed.html
@@ -5,9 +5,11 @@
 <title>Feed Example | WAI-ARIA Authoring Practices 1.1</title>
 
 <!--  Core js and css shared by all examples; do not modify when using this template. -->
-<link href="../css/core.css" rel="stylesheet">
-<link href="../css/table.css" rel="stylesheet">
-<script src="../js/examples.js" type="text/javascript"></script>
+<link rel="stylesheet" href="https://www.w3.org/StyleSheets/TR/2016/base.css">
+<link rel="stylesheet" href="../css/core.css">
+<script src="../js/examples.js"></script>
+<script src="../js/highlight.pack.js"></script>
+<script src="../js/app.js"></script>
 
 <!--  js and css for this example. -->
 <link href="css/feed.css" rel="stylesheet">
@@ -18,14 +20,14 @@
   <h1>Feed Example</h1>
   <p>
     <strong>NOTE:</strong> This page is work in progress; is not ready for review.
-    Work on this example is tracked by 
+    Work on this example is tracked by
     <a href="https://github.com/w3c/aria-practices/issues/246">issue 246.</a>
   </p>
   <p>
-    The example below demonstrates an implementation of the 
+    The example below demonstrates an implementation of the
     This example uses ... summarize salient techniques )
   </p>
-  
+
   <section>
     <h2 id="ex_label">Example</h2>
     <div role="separator" id="ex_start_sep" aria-labelledby="ex_start_sep ex_label" aria-label="Start of"></div>
@@ -60,7 +62,7 @@
 
   <section>
     <h2 id="kbd_label">Keyboard Support</h2>
-    <!-- 
+    <!--
       List the keys supported in this example.
       Remember to:
       Use kbd tags,e.g. <kbd>KeyName</kbd>.
@@ -70,7 +72,7 @@
       One key per row, e.g., do not combine <kbd>Up Arrow</kbd> and <kbd>Down Arrow</kbd> into a single row.
       Do not use the word "key", e.g., do not write <kbd>Enter Key</kbd> or <kbd>Enter</kbd> key.
      -->
-    <table aria-labelledby="kbd_label">
+    <table aria-labelledby="kbd_label" class="def">
       <thead>
         <tr>
           <th>Key</th>
@@ -102,9 +104,9 @@
   <section>
     <h2 id="rps_label">Role, Property, State, and Tabindex  Attributes</h2>
     <!--
-      Update this table to describe how roles, properties, states, and tabindex are used in this example.  
+      Update this table to describe how roles, properties, states, and tabindex are used in this example.
     -->
-    <table aria-labelledby="rps_label">
+    <table aria-labelledby="rps_label" class="data attributes">
       <thead>
         <tr>
           <th scope="col">Role</th>
@@ -124,7 +126,7 @@
         </tr>
         <tr>
           <td>
-            <!--  Leave this cell blank in rows that describe attributes applied to the element with the previously described role. 
+            <!--  Leave this cell blank in rows that describe attributes applied to the element with the previously described role.
               Make a row like this for each attribute/value pair.
           -->
           </td>
@@ -160,7 +162,7 @@
   <section>
     <h2 id="sc1_label">HTML Source Code</h2>
     <div role="separator" id="sc1_start_sep" aria-labelledby="sc1_start_sep sc1_label" aria-label="Start of"></div>
-    <pre id="sc1"></pre>
+    <pre><code id="sc1"></code></pre>
     <div role="separator" id="sc1_end_sep" aria-labelledby="sc1_end_sep sc1_label" aria-label="End of"></div>
     <script>
       sourceCode.add('sc1', 'ex1');
