--- a/examples/grid/advancedDataGrid.html
+++ b/examples/grid/advancedDataGrid.html
@@ -3,10 +3,13 @@
 <head>
 <meta charset="utf-8" />
 <title>Advanced Data Grid Example | WAI-ARIA Authoring Practices 1.1</title>
+
 <!--  Core js and css shared by all examples; do not modify when using this template. -->
-<link href="../css/core.css" rel="stylesheet">
-<link href="../css/table.css" rel="stylesheet">
-<script src="../js/examples.js" type="text/javascript"></script>
+<link rel="stylesheet" href="https://www.w3.org/StyleSheets/TR/2016/base.css">
+<link rel="stylesheet" href="../css/core.css">
+<script src="../js/examples.js"></script>
+<script src="../js/highlight.pack.js"></script>
+<script src="../js/app.js"></script>
 <script src="../js/utils.js" type="text/javascript"></script>
 <!--
   js and css for this example.
@@ -88,7 +91,7 @@
       Update this table to describe how roles, properties, states, and tabindex are used in this example.
       If the content will vary significantly for the above implementations, make this a level 4 section inside each of the above level 3 implementation sections.
     -->
-    <table aria-labelledby="rps_label">
+    <table aria-labelledby="rps_label" class="data attributes">
       <thead>
         <tr>
           <th>Attribute</th>
@@ -137,7 +140,7 @@
   <section>
     <h2 id="sc1_label">HTML Source Code</h2>
     <div role="separator" id="sc1_start_sep" aria-labelledby="sc1_start_sep sc1_label" aria-label="Start of"></div>
-    <div id="sc1"></div>
+    <pre><code id="sc1"></code></pre>
     <div role="separator" id="sc1_end_sep" aria-labelledby="sc1_end_sep sc1_label" aria-label="End of"></div>
     <!--
       The following script will show the reader the HTML source for the example that is in the div with ID 'ex1'.
