--- a/examples/grid/dataGrids.html
+++ b/examples/grid/dataGrids.html
@@ -5,9 +5,11 @@
 <title>Data Grid Examples | WAI-ARIA Authoring Practices 1.1</title>
 
 <!--  Core js and css shared by all examples; do not modify when using this template. -->
-<link href="../css/core.css" rel="stylesheet">
-<link href="../css/table.css" rel="stylesheet">
-<script src="../js/examples.js" type="text/javascript"></script>
+<link rel="stylesheet" href="https://www.w3.org/StyleSheets/TR/2016/base.css">
+<link rel="stylesheet" href="../css/core.css">
+<script src="../js/examples.js"></script>
+<script src="../js/highlight.pack.js"></script>
+<script src="../js/app.js"></script>
 <script src="../js/utils.js" type="text/javascript"></script>
 
 <!--  js and css for this example. -->
@@ -45,7 +47,7 @@
       <div role="separator" id="ex1_start_sep" aria-labelledby="ex1_start_sep ex1_label" aria-label="Start of"></div>
       <div id="ex1">
         <h4 id="grid1Label">Transactions January 1 through January 6</h4>
-        <table role="grid" aria-labelledby="grid1Label">
+        <table role="grid" aria-labelledby="grid1Label" class="data">
           <tr>
             <th>Date</th>
             <th>Type</th>
@@ -133,7 +135,7 @@
       <div role="separator" id="ex2_start_sep" aria-labelledby="ex2_start_sep ex2_label" aria-label="Start of"></div>
       <div id="ex2">
         <h4 id="grid2Label">Transactions January 1 through January 7</h4>
-        <table role="grid" aria-labelledby="grid2Label">
+        <table role="grid" aria-labelledby="grid2Label" class="data">
           <tr>
             <th aria-sort="ascending">
               <span tabindex="-1" role="button">Date</span>
@@ -334,8 +336,7 @@
         <button id="toggle_column_btn" type="button" name="toggle_columns">Hide Type and
           Category</button>
         <table role="grid" aria-labelledby="grid3Label" aria-rowcount="16" aria-colcount="6"
-          data-per-page="5"
-        >
+          data-per-page="5" class="data">
           <tr data-fixed="true">
             <th>Date</th>
             <th>Type</th>
@@ -521,7 +522,7 @@
 
   <section>
     <h2 id="kbd_label">Keyboard Support</h2>
-    <table aria-labelledby="kbd_label">
+    <table aria-labelledby="kbd_label" class="def">
       <tr>
         <th>key</th>
         <th>Function</th>
@@ -623,7 +624,7 @@
 
 <section>
     <h2 id="rps_label">Role, Property, State, and Tabindex  Attributes</h2>
-    <table aria-labelledby="rps_label">
+    <table aria-labelledby="rps_label" class="data attributes">
       <thead>
         <tr>
           <th scope="col">Role</th>
@@ -803,23 +804,23 @@
     <h2>HTML Source Code</h2>
     <h3 id="sc1_label">Example 1: Minimal Data Grid</h3>
     <div id="sc1_start_sep" role="separator" aria-labelledby="sc1_start_sep sc1_label" aria-label="Start of HTML for"></div>
-    <div id="sc1"></div>
+    <pre><code id="sc1"></code></pre>
     <div id="sc1_end_sep" role="separator" aria-labelledby="sc1_end_sep sc1_label" aria-label="End of HTML for"></div>
     <script>sourceCode.add('sc1', 'ex1')</script>
 
     <h3 id="sc2_label">Example 2: Sortable Data Grid With Editable Cells</h3>
     <div id="sc2_start_sep" role="separator" aria-labelledby="sc2_start_sep sc2_label" aria-label="Start of HTML for"></div>
-    <div id="sc2"></div>
+    <pre><code id="sc2"></code></pre>
     <div id="sc2_end_sep" role="separator" aria-labelledby="sc2_end_sep sc2_label" aria-label="End of HTML for"></div>
     <script>sourceCode.add('sc2', 'ex2')</script>
 
     <h3 id="sc3_label">Example 3: Scrollable Data Grid With Column Hiding</h3>
     <div id="sc3_start_sep" role="separator" aria-labelledby="sc3_start_sep sc3_label" aria-label="Start of HTML for"></div>
-    <div id="sc3"></div>
+    <pre><code id="sc3"></code></pre>
     <div id="sc3_end_sep" role="separator" aria-labelledby="sc3_end_sep sc3_label" aria-label="End of HTML for"></div>
     <script>sourceCode.add('sc3', 'ex3') </script>
     <!--  After all source has been added, run make to do the insert.  -->
-    <script> sourceCode.make() </script>
+    <script> sourceCode.make(); </script>
   </section>
   </main>
   <nav>
