--- a/examples/listbox/listbox.html
+++ b/examples/listbox/listbox.html
@@ -5,9 +5,11 @@
 <title>Listbox Example | WAI-ARIA Authoring Practices 1.1</title>
 
 <!--  Core js and css shared by all examples; do not modify when using this template. -->
-<link href="../css/core.css" rel="stylesheet">
-<link href="../css/table.css" rel="stylesheet">
-<script src="../js/examples.js" type="text/javascript"></script>
+<link rel="stylesheet" href="https://www.w3.org/StyleSheets/TR/2016/base.css">
+<link rel="stylesheet" href="../css/core.css">
+<script src="../js/examples.js"></script>
+<script src="../js/highlight.pack.js"></script>
+<script src="../js/app.js"></script>
 <script src="../js/utils.js" type="text/javascript"></script>
 
 <link href="css/listbox.css" rel="stylesheet">
@@ -234,7 +236,7 @@ while in the second example, they may select multiple options before activating 
 
   <section>
     <h2 id="rps_label">Role, Property, State, and Tabindex  Attributes</h2>
-    <table aria-labelledby="rps_label">
+    <table aria-labelledby="rps_label" class="data attributes">
       <thead>
         <tr>
           <th>Attribute</th>
@@ -328,12 +330,12 @@ while in the second example, they may select multiple options before activating 
     <h2>HTML Source Code</h2>
     <h3 id="sc1_label">Example 1: Single-Select Listbox</h3>
     <div id="sc1_start_sep" role="separator" aria-labelledby="sc1_start_sep sc1_label" aria-label="Start of HTML for"></div>
-    <div id="sc1"></div>
+    <pre><code id="sc1"></code></pre>
     <div id="sc1_end_sep" role="separator" aria-labelledby="sc1_end_sep sc1_label" aria-label="End of HTML for"></div>
     <script>sourceCode.add('sc1', 'ex1')</script>
     <h3 id="sc2_label">Example 2: Multi-Select Listbox</h3>
     <div id="sc2_start_sep" role="separator" aria-labelledby="sc2_start_sep sc2_label" aria-label="Start of HTML for"></div>
-    <div id="sc2"></div>
+    <pre><code id="sc2"></code></pre>
     <div id="sc2_end_sep" role="separator" aria-labelledby="sc2_end_sep sc2_label" aria-label="End of HTML for"></div>
     <script>sourceCode.add('sc2', 'ex2')</script>
     <!--  After all source has been added, run make to do the insert.  -->
