--- a/examples/menu-button/menu-button-2/menu-button-2.html
+++ b/examples/menu-button/menu-button-2/menu-button-2.html
@@ -3,10 +3,12 @@
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <title>Menu Button Example: Links | WAI-ARIA Authoring Practices 1.1</title>
 
-    <link href="../../css/core.css" rel="stylesheet">
-    <link href="../../css/table.css" rel="stylesheet">
-
-    <script src="../../js/examples.js" type="text/javascript"></script>
+    <!--  Core js and css shared by all examples; do not modify when using this template. -->
+    <link rel="stylesheet" href="https://www.w3.org/StyleSheets/TR/2016/base.css">
+    <link rel="stylesheet" href="../../css/core.css">
+    <script src="../../js/examples.js"></script>
+    <script src="../../js/highlight.pack.js"></script>
+    <script src="../../js/app.js"></script>
 
     <link href="css/MenubuttonLinks.css" rel="stylesheet">
 
@@ -97,7 +99,7 @@
 
         <h3 id="kbd1_label">Menu Button</h3>
 
-        <table aria-labelledby="kbd1_label kbd_label">
+        <table aria-labelledby="kbd1_label kbd_label" class="def">
           <thead>
             <tr>
               <th>Key</th>
@@ -118,7 +120,7 @@
 
          <h3 id="kbd2_label" class="widget">Popup Menu</h3>
 
-        <table aria-labelledby="kbd2_label kbd_label">
+        <table aria-labelledby="kbd2_label kbd_label" class="def">
           <thead>
             <tr>
               <th style="min-width: 8em">Key</th>
@@ -195,7 +197,7 @@
 
         <h3 id="rps1_label">Menu Button Widget</h3>
 
-        <table aria-labelledby="rps1_label rps_label">
+        <table aria-labelledby="rps1_label rps_label" class="data attributes">
           <thead>
             <tr>
               <th scope="col">Role</th>
@@ -288,7 +290,7 @@
 
         <h3 id="rps2_label">Popup Menu Widget</h3>
 
-        <table aria-labelledby="rps2_label rps_label">
+        <table aria-labelledby="rps2_label rps_label" class="data attributes">
           <thead>
             <tr>
               <th scope="col">Role</th>
@@ -391,7 +393,7 @@
       <section>
         <h2 id="sc1_label">HTML Source Code</h2>
         <div role="separator" id="sc1_start_sep" aria-labelledby="sc1_start_sep sc1_label" aria-label="Start of"></div>
-        <div id="sc1"></div>
+        <pre><code id="sc1"></code></pre>
         <div role="separator" id="sc1_end_sep" aria-labelledby="sc1_end_sep sc1_label" aria-label="End of"></div>
         <!--
           The following script will show the reader the HTML source for the example that is in the div with ID 'ex1'.
