--- a/examples/menubar/menubar-1/menubar-1.html
+++ b/examples/menubar/menubar-1/menubar-1.html
@@ -3,9 +3,14 @@
 <head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 <title>Navigation Menubar Example | WAI-ARIA Authoring Practices 1.1</title>
-<link href="../../css/core.css" rel="stylesheet">
-<link href="../../css/table.css" rel="stylesheet">
-<script src="../../js/examples.js" type="text/javascript"></script>
+
+<!--  Core js and css shared by all examples; do not modify when using this template. -->
+<link rel="stylesheet" href="https://www.w3.org/StyleSheets/TR/2016/base.css">
+<link rel="stylesheet" href="../../css/core.css">
+<script src="../../js/examples.js"></script>
+<script src="../../js/highlight.pack.js"></script>
+<script src="../../js/app.js"></script>
+
 <script src="js/MenubarLinks.js" type="text/javascript"></script>
 <script src="js/MenubarItemLinks.js" type="text/javascript"></script>
 <script src="js/PopupMenuLinks.js" type="text/javascript"></script>
@@ -244,7 +249,7 @@
   <section>
     <h2 id="kbd_label">Keyboard Support</h2>
     <h3 id="kbd1_label">Menubar</h3>
-    <table aria-labelledby="kbd1_label kbd_label">
+    <table aria-labelledby="kbd1_label kbd_label" class="def">
       <thead>
         <tr>
           <th>Key</th>
@@ -343,7 +348,7 @@
     </table>
 
     <h3 id="kbd2_label">Popup Menu</h3>
-    <table aria-labelledby="kbd2_label kbd_label">
+    <table aria-labelledby="kbd2_label kbd_label" class="def">
       <thead>
         <tr>
           <th>Key</th>
@@ -459,7 +464,7 @@
     <h2 id="rps_label">Role, Property, State, and Tabindex Attributes</h2>
     <h3 id="rps1_label">Menubar</h3>
 
-    <table aria-labelledby="rps1_label rps_label">
+    <table aria-labelledby="rps1_label rps_label" class="data attributes">
       <thead>
         <tr>
           <th>Role</th>
@@ -633,7 +638,7 @@
     </table>
 
     <h3 id="rps2_label">Popup Menu</h3>
-    <table aria-labelledby="rps2_label rps_label">
+    <table aria-labelledby="rps2_label rps_label" class="data attributes">
       <thead>
         <tr>
           <th>Role</th>
@@ -804,14 +809,14 @@
     <h2>HTML Source Code</h2>
     <h3 id="sc1_label">Example 1: Menubar With ARIA Markup in the HTML Source</h3>
     <div id="sc1_start_sep" role="separator" aria-labelledby="sc1_start_sep sc1_label" aria-label="Start of HTML for" ></div>
-    <div id="sc1"></div>
+    <pre><code id="sc1"></code></pre>
     <div id="sc1_end_sep" role="separator" aria-labelledby="sc1_end_sep sc1_label" aria-label="End of HTML for" ></div>
     <script>
             sourceCode.add('sc1', 'ex1')
             </script>
     <h3 id="sc2_label">Example 2: ARIA markup added dynamically</h3>
     <div id="sc2_start_sep" role="separator" aria-labelledby="sc2_start_sep sc2_label" aria-label="Start of HTML for" ></div>
-    <div id="sc2"></div>
+    <pre><code id="sc2"></code></pre>
     <div id="sc2_end_sep" role="separator" aria-labelledby="sc2_end_sep sc2_label" aria-label="End of HTML for" ></div>
     <script>
             sourceCode.add('sc2', 'ex2')
