--- a/examples/menubar/menubar-2/menubar-2.html
+++ b/examples/menubar/menubar-2/menubar-2.html
@@ -4,12 +4,15 @@
   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
   <title>Editor Menubar Example | WAI-ARIA Authoring Practices 1.1</title>
 
-  <link href="../../css/core.css"  rel="stylesheet">
-  <link href="../../css/table.css" rel="stylesheet">
+  <!--  Core js and css shared by all examples; do not modify when using this template. -->
+  <link rel="stylesheet" href="https://www.w3.org/StyleSheets/TR/2016/base.css">
+  <link rel="stylesheet" href="../../css/core.css">
+  <script src="../../js/examples.js"></script>
+  <script src="../../js/highlight.pack.js"></script>
+  <script src="../../js/app.js"></script>
 
   <link href="css/menubarAction.css" rel="stylesheet">
 
-  <script src="../../js/examples.js" type="text/javascript"></script>
   <script src="js/TextStyling.js"    type="text/javascript"></script>
 
   <script src="js/MenubarAction.js"     type="text/javascript"></script>
@@ -153,7 +156,7 @@
     <h2 id="kbd_label">Keyboard Support</h2>
 
     <h3 id="kbd1_label">Menubar</h3>
-    <table aria-labelledby="kbd1_label kbd_label">
+    <table aria-labelledby="kbd1_label kbd_label" class="def">
       <thead>
         <tr>
           <th>Key</th>
@@ -228,7 +231,7 @@
     </table>
 
     <h3 id="kbd2_label">Popup</h3>
-    <table aria-labelledby="kbd2_label kbd_label">
+    <table aria-labelledby="kbd2_label kbd_label" class="def">
       <thead>
         <tr>
           <th>Key</th>
@@ -330,7 +333,7 @@
       <h2 id="rps_label">Role, Property, State, and Tabindex Attributes</h2>
 
       <h3 id="rps1_label">Menubar</h3>
-      <table aria-labelledby="rps1_label rps_label">
+      <table aria-labelledby="rps1_label rps_label" class="data attributes">
         <thead>
           <tr>
             <th scope="col">Role</th>
@@ -485,7 +488,7 @@
       </table>
 
       <h3 id="rps2_label">Popup Menu</h3>
-      <table aria-labelledby="rps2_label rps_label">
+      <table aria-labelledby="rps2_label rps_label" class="data attributes">
       <thead>
         <tr>
           <th scope="col">Role</th>
@@ -745,7 +748,7 @@
   <section>
     <h2 id="sc1_label">HTML Source Code</h2>
     <div id="sc1_start_sep" role="separator" aria-labelledby="sc1_start_sep sc1_label" aria-label="Start of" ></div>
-    <div id="sc1"></div>
+    <pre><code id="sc1"></code></pre>
     <div id="sc1_end_sep" role="separator" aria-labelledby="sc1_end_sep sc1_label" aria-label="End of" ></div>
     <script>
 sourceCode.add('sc1', 'ex1');
