--- a/examples/radio/radio-2/radio-2.html
+++ b/examples/radio/radio-2/radio-2.html
@@ -4,15 +4,17 @@
     <meta charset="utf-8" />
     <title>Radio Button Example (aria-activedescendant) | WAI-ARIA Authoring Practices 1.1</title>
 
-    <link href="../../css/core.css" rel="stylesheet">
-    <link href="../../css/table.css" rel="stylesheet">
+    <!--  Core js and css shared by all examples; do not modify when using this template. -->
+    <link rel="stylesheet" href="https://www.w3.org/StyleSheets/TR/2016/base.css">
+    <link rel="stylesheet" href="../../css/core.css">
+    <script src="../../js/examples.js"></script>
+    <script src="../../js/highlight.pack.js"></script>
+    <script src="../../js/app.js"></script>
 
     <link href="css/radioActiveDescendant.css" rel="stylesheet">
 
     <script src="js/radioGroupActiveDescendant.js" type="text/javascript"></script>
     <script src="js/radioButtonActiveDescendant.js" type="text/javascript"></script>
-
-    <script src="../../js/examples.js" type="text/javascript"></script>
 
   </head>
   <body>
@@ -103,7 +105,7 @@
 
 
       <h3 id="kbd_label">Keyboard Support</h3>
-      <table aria-labelledby="kbd_label">
+      <table aria-labelledby="kbd_label" class="def">
         <thead>
           <tr>
             <th>Key</th>
@@ -152,7 +154,7 @@
 
     <h3 id="rps_label">ARIA Roles, Properties and States</h3>
 
-      <table aria-labelledby="rps_label">
+      <table aria-labelledby="rps_label" class="data attributes">
         <thead>
           <tr>
             <th scope="col">Role</th>
@@ -272,7 +274,7 @@
       <section>
         <h2 id="sc1_label">HTML Source Code</h2>
         <div role="separator" id="sc1_start_sep" aria-labelledby="sc1_start_sep sc1_label" aria-label="Start of"></div>
-        <div id="sc1"></div>
+        <pre><code id="sc1"></code></pre>
         <div role="separator" id="sc1_end_sep" aria-labelledby="sc1_end_sep sc1_label" aria-label="End of"></div>
         <!--
           The following script will show the reader the HTML source for the example that is in the div with ID 'ex1'.
