--- a/examples/tabs/tabs-2/tabs.html
+++ b/examples/tabs/tabs-2/tabs.html
@@ -5,9 +5,11 @@
     <title>Tabs With Manual Activation | WAI-ARIA Authoring Practices 1.1</title>
 
     <!--  Core js and css shared by all examples; do not modify when using this template. -->
-    <link href="../../css/core.css" rel="stylesheet">
-    <link href="../../css/table.css" rel="stylesheet">
-    <script src="../../js/examples.js" type="text/javascript"></script>
+    <link rel="stylesheet" href="https://www.w3.org/StyleSheets/TR/2016/base.css">
+    <link rel="stylesheet" href="../../css/core.css">
+    <script src="../../js/examples.js"></script>
+    <script src="../../js/highlight.pack.js"></script>
+    <script src="../../js/app.js"></script>
 
     <!--  js and css for this example. -->
     <link href="../css/tabs.css" rel="stylesheet">
@@ -68,7 +70,7 @@
 
       <section>
         <h2 id="kbd_label">Keyboard Support</h2>
-        <table aria-labelledby="kbd_label">
+        <table aria-labelledby="kbd_label" class="def">
           <thead>
             <tr>
               <th>Key</th>
@@ -129,7 +131,7 @@
 
       <section>
         <h2 id="rps_label">Role, Property, State, and Tabindex  Attributes</h2>
-        <table aria-labelledby="rps_label">
+        <table aria-labelledby="rps_label" class="data attributes">
           <thead>
             <tr>
               <th scope="col">Role</th>
@@ -304,7 +306,7 @@
       <section>
         <h2 id="sc1_label">HTML Source Code</h2>
         <div role="separator" id="sc1_start_sep" aria-labelledby="sc1_start_sep sc1_label" aria-label="Start of"></div>
-        <div id="sc1"></div>
+        <pre><code id="sc1"></code></pre>
         <div role="separator" id="sc1_end_sep" aria-labelledby="sc1_end_sep sc1_label" aria-label="End of"></div>
         <script>
           sourceCode.add('sc1', 'ex1');
