--- a/examples/toolbar/toolbar.html
+++ b/examples/toolbar/toolbar.html
@@ -5,10 +5,13 @@
 <title>Toolbar Example | WAI-ARIA Authoring Practices 1.1</title>
 
 <!--  Core js and css shared by all examples; do not modify when using this template. -->
-<link href="../css/core.css" rel="stylesheet">
-<link href="../css/table.css" rel="stylesheet">
-<script src="../js/examples.js" type="text/javascript"></script>
+<link rel="stylesheet" href="https://www.w3.org/StyleSheets/TR/2016/base.css">
+<link rel="stylesheet" href="../css/core.css">
+<script src="../js/examples.js"></script>
+<script src="../js/highlight.pack.js"></script>
+<script src="../js/app.js"></script>
 <script src="../js/utils.js" type="text/javascript"></script>
+
 <!--  js and css for this example. -->
 <link href="css/menuButton.css" rel="stylesheet">
 <script src="js/menuButton.js" type="text/javascript"></script>
@@ -21,7 +24,7 @@
   <h1>Toolbar Example</h1>
   <p>
     <strong>NOTE:</strong> This example is not yet complete.
-    When it is ready for review, feedback will be welcom in
+    When it is ready for review, feedback will be welcome in
     <a href="https://github.com/w3c/aria-practices/issues/126">issue 126.</a>
   </p>
   <p>
@@ -100,7 +103,7 @@
 
   <section>
     <h2 id="rps_label">Role, Property, State, and Tabindex  Attributes</h2>
-    <table aria-labelledby="rps_label">
+    <table aria-labelledby="rps_label" class="data attributes">
       <thead>
         <tr>
           <th>Attribute</th>
@@ -153,7 +156,7 @@
   <section>
     <h2 id="sc1_label">HTML Source Code</h2>
     <div role="separator" id="sc1_start_sep" aria-labelledby="sc1_start_sep sc1_label" aria-label="Start of HTML for "></div>
-    <div id="sc1"></div>
+    <pre><code id="sc1"></code></pre>
     <div role="separator" id="sc1_end_sep" aria-labelledby="sc1_end_sep sc1_label" aria-label="End of HTML for "></div>
     <!--
       The following script will show the reader the HTML source for the example that is in the div with ID 'ex1'.
