--- a/examples/treeview/treeview-1/treeview-1a.html
+++ b/examples/treeview/treeview-1/treeview-1a.html
@@ -4,8 +4,12 @@
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <title>File Directory Treeview Example Using Computed Properties | WAI-ARIA Authoring Practices 1.1</title>
 
-    <link href="../../css/core.css" rel="stylesheet">
-    <link href="../../css/table.css" rel="stylesheet">
+    <!--  Core js and css shared by all examples; do not modify when using this template. -->
+    <link rel="stylesheet" href="https://www.w3.org/StyleSheets/TR/2016/base.css">
+    <link rel="stylesheet" href="../../css/core.css">
+    <script src="../../js/examples.js"></script>
+    <script src="../../js/highlight.pack.js"></script>
+    <script src="../../js/app.js"></script>
 
     <link href="css/tree.css" rel="stylesheet">
 
@@ -13,29 +17,27 @@
     <script type="text/javascript" src="js/treeitem.js"></script>
     <script type="text/javascript" src="js/treeitemClick.js"></script>
 
-    <script src="../../js/examples.js" type="text/javascript"></script>
-
   </head>
 
   <body>
     <main>
       <h1>File Directory Treeview Example Using Computed Properties</h1>
       <p>
-        Code is complete for this example. 
-        Feedback and progress on editorial work on this page are being tracked in 
+        Code is complete for this example.
+        Feedback and progress on editorial work on this page are being tracked in
         <a href="https://github.com/w3c/aria-practices/issues/223">issue 223.</a>
       </p>
       <p>
-        The below example implements the 
-        <a href="../../../#TreeView">Treeview Design Pattern</a> 
-        to simulate a file selector.  
+        The below example implements the
+        <a href="../../../#TreeView">Treeview Design Pattern</a>
+        to simulate a file selector.
         When users activate an item that represents a file name in the below tree, the name of the selected file appears in the read-only edit field next to the tree.
       </p>
       <p>
-        This example relies on the browser to compute values for <code>aria-setsize</code>, <code>aria-posinset</code>, and <code>aria-level</code>.   
-        The ARIA 1.0 specification for these properties states that browsers can, but are not required to, compute their values. 
+        This example relies on the browser to compute values for <code>aria-setsize</code>, <code>aria-posinset</code>, and <code>aria-level</code>.
+        The ARIA 1.0 specification for these properties states that browsers can, but are not required to, compute their values.
         So, some browser and assistive technology combinations may not compute or report correct position and level information if it is not explicitly declared.
-        If testing reveals gaps in support for these properties, override automatic computation by explicitly declaring their values as demonstrated in the example of a 
+        If testing reveals gaps in support for these properties, override automatic computation by explicitly declaring their values as demonstrated in the example of a
         <a href="../treeview-1/treeview-1b.html">File Directory Treeview using <em>declared</em> properties.</a>
        </p>
       <p>Similar examples include: </p>
@@ -263,25 +265,25 @@
       <section>
         <h2>Accessibility Features</h2>
         <p>
-          The expandable nodes (parent items) in the tree have a custom focus and hover styling created using CSS focus and hover classes.  
+          The expandable nodes (parent items) in the tree have a custom focus and hover styling created using CSS focus and hover classes.
           To do this, focus, blur, mouseover, and mouseout events trigger application of classes to the <code>span</code> element that contains the visible label of the <code>treeitem</code>.
         </p>
       </section>
-      
+
       <section>
         <h2>Terms Used to Describe Trees</h2>
         <p>
           A tree item that can be expanded to reveal child items is called a parrent node.
           It is a closed node when the children are hidden and an open node when it is expanded.
-          An end node does not have any children. 
-          For a complete list of terms and definitions, see the 
+          An end node does not have any children.
+          For a complete list of terms and definitions, see the
           <a href="../../../#TreeView">Treeview Design Pattern.</a>
         </p>
       </section>
 
       <section>
         <h2 id="kbd_label">Keyboard Support</h2>
-        <table aria-labelledby="kbd_label">
+        <table aria-labelledby="kbd_label" class="def">
           <thead>
             <tr>
               <th>Key</th>
@@ -371,7 +373,7 @@
 
       <section>
         <h2 id="rps_label">Role, Property, State, and Tabindex  Attributes</h2>
-        <table aria-labelledby="rps_label">
+        <table aria-labelledby="rps_label" class="data attributes">
           <thead>
             <tr>
               <th scope="col">Role</th>
@@ -390,8 +392,8 @@
                   <li>Identifies the <code>ul</code> element as an <code>tree</code> widget.</li>
                   <li>A <code>tree</code> is a container widget for focusable, interactive <code>treeitem</code> elements.</li>
                   <li>
-                    The <code>tree</code> is not made focusable with a <code>tabindex</code> value because a 
-                    <a href="../../../#kbd_roving_tabindex">roving tabindex</a> 
+                    The <code>tree</code> is not made focusable with a <code>tabindex</code> value because a
+                    <a href="../../../#kbd_roving_tabindex">roving tabindex</a>
                     is used to control which descendant <code>treeitem</code> receives focus.
                   </li>
                 </ul>
@@ -442,7 +444,7 @@
                   <li>Only one <code>treeitem</code> in the <code>tree</code> has <code>tabindex=&quot;0&quot;</code>.</li>
                   <li>In this implementation, the first <code>treeitem</code> in the <code>tree</code> is included in the tab sequence when the page loads.</li>
                   <li>
-                    When the user moves focus in the <code>tree</code>, the element included in the tab sequence changes to the element with focus as described in the section on 
+                    When the user moves focus in the <code>tree</code>, the element included in the tab sequence changes to the element with focus as described in the section on
                     <a href="../../../#kbd_roving_tabindex">roving tabindex.</a>
                   </li>
                  </ul>
@@ -514,7 +516,7 @@
       <section>
         <h2 id="sc1_label">HTML Source Code</h2>
         <div role="separator" id="sc1_start_sep" aria-labelledby="sc1_start_sep sc1_label" aria-label="Start of"></div>
-        <div id="sc1"></div>
+        <pre><code id="sc1"></code></pre>
         <div role="separator" id="sc1_end_sep" aria-labelledby="sc1_end_sep sc1_label" aria-label="End of"></div>
 
         <script>
