--- a/examples/treeview/treeview-1/treeview-1b.html
+++ b/examples/treeview/treeview-1/treeview-1b.html
@@ -4,9 +4,12 @@
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <title>File Directory Treeview Example Using Declared Properties | WAI-ARIA Authoring Practices 1.1</title>
 
-    <link href="../../css/core.css" rel="stylesheet">
-    <link href="../../css/table.css" rel="stylesheet">
-    <script src="../../js/examples.js" type="text/javascript"></script>
+    <!--  Core js and css shared by all examples; do not modify when using this template. -->
+    <link rel="stylesheet" href="https://www.w3.org/StyleSheets/TR/2016/base.css">
+    <link rel="stylesheet" href="../../css/core.css">
+    <script src="../../js/examples.js"></script>
+    <script src="../../js/highlight.pack.js"></script>
+    <script src="../../js/app.js"></script>
 
     <link href="css/tree.css" rel="stylesheet">
     <script type="text/javascript" src="js/tree.js"></script>
@@ -17,14 +20,14 @@
     <main>
       <h1>File Directory Treeview Example Using Declared Properties</h1>
       <p>
-        Code is complete for this example. 
-        Feedback and progress on editorial work on this page are being tracked in 
+        Code is complete for this example.
+        Feedback and progress on editorial work on this page are being tracked in
         <a href="https://github.com/w3c/aria-practices/issues/224">issue 224.</a>
       </p>
       <p>
-        The below example implements the 
-        <a href="../../../#TreeView">Treeview Design Pattern</a> 
-        to simulate a file selector.  
+        The below example implements the
+        <a href="../../../#TreeView">Treeview Design Pattern</a>
+        to simulate a file selector.
         When users activate an item that represents a file name in the below tree, the name of the selected file appears in the read-only edit field next to the tree.
       </p>
       <p>
@@ -418,29 +421,29 @@
         </div>
         <div role="separator" id="ex_end_sep" aria-labelledby="ex_end_sep start" aria-label="End of"></div>
       </section>
-      
+
       <section>
         <h2>Accessibility Features</h2>
         <p>
-          The expandable nodes (parent items) in the tree have a custom focus and hover styling created using CSS focus and hover classes.  
+          The expandable nodes (parent items) in the tree have a custom focus and hover styling created using CSS focus and hover classes.
           To do this, focus, blur, mouseover, and mouseout events trigger application of classes to the <code>span</code> element that contains the visible label of the <code>treeitem</code>.
         </p>
       </section>
-      
+
       <section>
         <h2>Terms Used to Describe Trees</h2>
         <p>
           A tree item that can be expanded to reveal child items is called a parrent node.
           It is a closed node when the children are hidden and an open node when it is expanded.
-          An end node does not have any children. 
-          For a complete list of terms and definitions, see the 
+          An end node does not have any children.
+          For a complete list of terms and definitions, see the
           <a href="../../../#TreeView">Treeview Design Pattern.</a>
         </p>
       </section>
 
       <section>
         <h2 id="kbd_label">Keyboard Support</h2>
-        <table aria-labelledby="kbd_label">
+        <table aria-labelledby="kbd_label" class="def">
           <thead>
             <tr>
               <th>Key</th>
@@ -530,7 +533,7 @@
 
       <section>
         <h2 id="rps_label">Role, Property, State, and Tabindex  Attributes</h2>
-        <table aria-labelledby="rps_label">
+        <table aria-labelledby="rps_label" class="data attributes">
           <thead>
             <tr>
               <th scope="col">Role</th>
@@ -549,8 +552,8 @@
                   <li>Identifies the <code>ul</code> element as an <code>tree</code> widget.</li>
                   <li>A <code>tree</code> is a container widget for focusable, interactive <code>treeitem</code> elements.</li>
                   <li>
-                    The <code>tree</code> is not made focusable with a <code>tabindex</code> value because a 
-                    <a href="../../../#kbd_roving_tabindex">roving tabindex</a> 
+                    The <code>tree</code> is not made focusable with a <code>tabindex</code> value because a
+                    <a href="../../../#kbd_roving_tabindex">roving tabindex</a>
                     is used to control which descendant <code>treeitem</code> receives focus.
                   </li>
                 </ul>
@@ -601,7 +604,7 @@
                   <li>Only one <code>treeitem</code> in the <code>tree</code> has <code>tabindex=&quot;0&quot;</code>.</li>
                   <li>In this implementation, the first <code>treeitem</code> in the <code>tree</code> is included in the tab sequence when the page loads.</li>
                   <li>
-                    When the user moves focus in the <code>tree</code>, the element included in the tab sequence changes to the element with focus as described in the section on 
+                    When the user moves focus in the <code>tree</code>, the element included in the tab sequence changes to the element with focus as described in the section on
                     <a href="../../../#kbd_roving_tabindex">roving tabindex.</a>
                   </li>
                  </ul>
@@ -702,7 +705,7 @@
       <section>
         <h2 id="sc1_label">HTML Source Code</h2>
         <div role="separator" id="sc1_start_sep" aria-labelledby="sc1_start_sep sc1_label" aria-label="Start of"></div>
-        <div id="sc1"></div>
+        <pre><code id="sc1"></code></pre>
         <div role="separator" id="sc1_end_sep" aria-labelledby="sc1_end_sep sc1_label" aria-label="End of"></div>
 
         <script>
