Small tweaks to code examples related to new design

--- a/examples/accordion/accordion1.html
+++ b/examples/accordion/accordion1.html
@@ -157,7 +157,7 @@
       </thead>
       <tbody>
         <tr>
-          <td><kbd>Space</kbd> or <kbd>Enter</kbd></td>
+          <th><kbd>Space</kbd> or <kbd>Enter</kbd></th>
           <td>When focus is on the accordion header of a collapsed section, expands the section.</td>
         </tr>
       </tbody>
