New design for checkboxes

--- a/examples/checkbox/checkbox-1/checkbox-1.html
+++ b/examples/checkbox/checkbox-1/checkbox-1.html
@@ -11,8 +11,7 @@
   <script src="../../js/highlight.pack.js"></script>
   <script src="../../js/app.js"></script>
 
-  <link href="css/checkbox.css" rel="stylesheet">
-
+  <link href="../css/checkbox.css" rel="stylesheet">
   <script src="js/checkbox.js" type="text/javascript"></script>
 </head>
 <body>
@@ -34,10 +33,12 @@
       <div  id="ex1">
         <h3>Sandwich Condiments</h3>
         <div>
-           <div role="checkbox" aria-checked="false"  tabindex= "0">Lettuce</div>
-           <div role="checkbox" aria-checked="true"   tabindex= "0">Tomato</div>
-           <div role="checkbox" aria-checked="false"  tabindex= "0">Mustard</div>
-           <div role="checkbox" aria-checked="false"  tabindex= "0">Sprouts</div>
+          <ul>
+            <li><div role="checkbox" aria-checked="false" tabindex= "0">Lettuce</div></li>
+            <li><div role="checkbox" aria-checked="true"  tabindex= "0">Tomato</div></li>
+            <li><div role="checkbox" aria-checked="false" tabindex= "0">Mustard</div></li>
+            <li><div role="checkbox" aria-checked="false" tabindex= "0">Sprouts</div></li>
+          </ul>
         </div>
 
         <script type="text/javascript">
