--- a/examples/checkbox/checkbox-2/checkbox-2.html
+++ b/examples/checkbox/checkbox-2/checkbox-2.html
@@ -11,8 +11,7 @@
     <script src="../../js/highlight.pack.js"></script>
     <script src="../../js/app.js"></script>
 
-    <link href="css/checkboxMixed.css" rel="stylesheet">
-
+    <link href="../css/checkbox.css" rel="stylesheet">
     <script src="js/controlledCheckbox.js" type="text/javascript"></script>
     <script src="js/checkboxMixed.js" type="text/javascript"></script>
   </head>
